Fix page navigation on small screens

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -121,6 +121,7 @@ main > nav {
 .pagination > .prev,
 .pagination > .next {
 	background-color: #1a1a1a;
+	display: inline;
 	width: 52px;
 	height: 52px;
 	margin: 0;
